# agent-interview

./: .gitignore  README.md
py_version/: enums.py  main.py  plan.md  pyproject.toml  schemas.py  start.sh  tool_converter.py  utils.py
py_version/agents/: benefits.py  registry.py
py_version/llm_provider_invocations/: openai.py
py_version/llm_tool_converters/: openai.py
py_version/temporal/: __init__.py  agent.py  worker.py
py_version/temporal/activities/: __init__.py  invoke_agent.py  say_hello.py
py_version/tools/: base.py  benefits_enrollment.py  calculate_pension.py  fsa_hsa_calculator.py  health_insurance_lookup.py  pto_balance_lookup.py  registry.py
ts_version/: .env.example  .eslintrc.json  Dockerfile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
ts_version/docker/nginx/: dev.conf
ts_version/docker/postgres/: init-dev.sql
ts_version/docs/: API.md  DEPLOYMENT.md
ts_version/frontend/: Dockerfile.dev  README.md  package-lock.json  package.json  tailwind.config.js
ts_version/frontend/src/: App.tsx  index.css
ts_version/scripts/: build.sh  deploy.sh  setup.sh  start-all.sh  start-local-only.sh  stop-all.sh
ts_version/src/__tests__/: equivalence.test.ts  fileUpload.test.ts  llm.test.ts  performance.test.ts  registry.test.ts  server.integration.test.ts  trpc.test.ts  workflow.integration.test.ts
ts_version/src/agents/: AgentRegistry.ts  benefits.ts  (+2 more)
ts_version/tests/: setup.ts  temporal.test.ts  tools.test.ts  validation.test.ts
(+41 files in other folders)
